// Event Management Service
// Common configuration is in root build.gradle
// This file contains only service-specific dependencies and configuration

plugins {
    // Core plugins applied from root build.gradle configure block
    // Declaring here to ensure proper evaluation order with pluginManagement
    id 'java'
    id 'org.springframework.boot'
    id 'io.spring.dependency-management'
    id 'org.flywaydb.flyway'
    id 'org.openapi.generator'
    id 'jacoco'
    id 'checkstyle'
    // Service-specific plugin
    id 'com.gorylenko.gradle-git-properties' version '2.5.7'
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

// Git properties generation
gitProperties {
    keys = ['git.branch', 'git.commit.id', 'git.commit.id.abbrev', 'git.commit.time']
    dateFormat = "yyyy-MM-dd'T'HH:mm:ssZ"
    dateFormatTimeZone = "UTC"
    failOnNoGitDirectory = false
    extProperty = 'gitProps'
}

dependencies {
    // Shared test infrastructure (PostgreSQL Testcontainers base class)
    testImplementation testFixtures(project(':shared-kernel'))

    // Service-specific: Caching (Caffeine in-memory cache)
    implementation 'com.github.ben-manes.caffeine:caffeine:3.2.3'
    implementation 'org.springframework.boot:spring-boot-starter-cache'

    // Service-specific: AWS SDK for EventBridge, S3, CloudFront, and SES
    implementation platform('software.amazon.awssdk:bom:2.39.0')
    implementation 'software.amazon.awssdk:eventbridge'
    implementation 'software.amazon.awssdk:s3'
    implementation 'software.amazon.awssdk:cloudfront'
    implementation 'software.amazon.awssdk:ses'  // BAT-7: Email notifications
    implementation 'software.amazon.awssdk:url-connection-client'
    // Note: AWS SDK v2 uses software.amazon.awssdk:ses, but EmailService uses legacy v1 API
    // Adding AWS SDK v1 SES for compatibility with existing EmailService implementation
    implementation 'com.amazonaws:aws-java-sdk-ses:1.12.772'

    // Service-specific: Thymeleaf for email templates (BAT-7)
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    // Service-specific: WebSocket for real-time push notifications (BAT-7)
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // Service-specific: Hypersistence Utils for JSONB support (BAT-7).
    // Epic 13 (SB4): the artifact is Hibernate-version-specific; SB 4.0.7 manages Hibernate
    // 7.2, so -hibernate-63 (Hibernate 6.3) is replaced by -hibernate-71 (Hibernate 7.1+).
    // The 6.x JsonBinaryType referenced the moved org.hibernate...BindableType -> "cannot access".
    implementation 'io.hypersistence:hypersistence-utils-hibernate-71:3.15.3'

    // Service-specific: JWT for email confirmation tokens
    implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'

    // Service-specific: ShedLock for distributed scheduled tasks (GAP-2)
    implementation 'net.javacrumbs.shedlock:shedlock-spring:5.10.0'
    implementation 'net.javacrumbs.shedlock:shedlock-provider-jdbc-template:5.10.0'

    // Story 10.17: Spring Cloud AWS SQS for inbound email @SqsListener
    // Epic 13 (SB4): 3.3.0 targets Spring Boot 3.x and crashes on SB4 — its SqsAutoConfiguration
    // calls the removed PropertyMapper.alwaysApplyingWhenNonNull() (NoSuchMethodError at context
    // load). The 4.0.x line is the Spring Boot 4 / Spring Framework 7 aligned release.
    implementation platform('io.awspring.cloud:spring-cloud-aws-dependencies:4.0.2')
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-sqs'

    // Story 10.17: jakarta.mail-api for MIME parsing of inbound emails
    // (transitive via Thymeleaf but must be declared explicitly for compile-time use)
    implementation 'jakarta.mail:jakarta.mail-api:2.1.3'
    runtimeOnly 'org.eclipse.angus:angus-mail:2.0.3'

    // Spec spec-auto-participant-email-aliases-excel-export: name-badge XLSX export.
    // Same version as partner-coordination-service to keep the POI footprint aligned.
    implementation 'org.apache.poi:poi-ooxml:5.4.0'
}

// Flyway configuration - service-specific table name
flyway {
    table = 'flyway_schema_history_event_management'
}

// OpenAPI Generator - Generate API interfaces and DTOs from OpenAPI spec
openApiGenerate {
    generatorName = 'spring'
    inputSpec = "$rootDir/docs/api/events-api.openapi.yml".toString()
    outputDir = "$buildDir/generated".toString()
    apiPackage = 'ch.batbern.events.api.generated'
    modelPackage = 'ch.batbern.events.dto.generated'
    invokerPackage = 'ch.batbern.events.api.invoker'
    validateSpec = false

    importMappings = [
        'ErrorResponse': 'ch.batbern.shared.dto.ErrorResponse',
        'PaginationMetadata': 'ch.batbern.shared.api.PaginationMetadata',
        'PaginatedResponse': 'ch.batbern.shared.dto.PaginatedResponse'
    ]

    typeMappings = [
        'ErrorResponse': 'ch.batbern.shared.dto.ErrorResponse',
        'PaginationMetadata': 'ch.batbern.shared.api.PaginationMetadata'
    ]

    configOptions = [
        dateLibrary: 'java8',
        interfaceOnly: 'true',
        skipDefaultInterface: 'true',
        useTags: 'true',
        useSpringBoot3: 'true',
        documentationProvider: 'none',
        openApiNullable: 'false',
        hideGenerationTimestamp: 'true',
        useBeanValidation: 'true',
        performBeanValidation: 'true',
        useOptional: 'false',
        delegatePattern: 'false',
        useJakartaEe: 'true',
        generateBuilders: 'true'
    ]

    globalProperties = [
        models: '',
        apis: '',
        supportingFiles: 'ApiUtil.java'
    ]

    schemaMappings = [
        'ErrorResponse': 'ch.batbern.shared.dto.ErrorResponse',
        'PaginationMetadata': 'ch.batbern.shared.api.PaginationMetadata'
    ]
}

// OpenAPI Generator - Generate Topics API DTOs (Story 1: Topics API Migration - ADR-003/ADR-006)
// This task generates DTOs from topics-api.openapi.yml with topicCode identifiers
task openApiGenerateTopics(type: org.openapitools.generator.gradle.plugin.tasks.GenerateTask) {
    generatorName = 'spring'
    inputSpec = "$rootDir/docs/api/topics-api.openapi.yml".toString()
    outputDir = "$buildDir/generated-topics".toString()
    apiPackage = 'ch.batbern.events.api.generated.topics'
    modelPackage = 'ch.batbern.events.dto.generated.topics'
    validateSpec = false  // Skip validation for custom license fields

    // Import mappings - use shared-kernel types instead of generating
    importMappings = [
        'ErrorResponse': 'ch.batbern.shared.dto.ErrorResponse',
        'PaginationMetadata': 'ch.batbern.shared.api.PaginationMetadata'
    ]

    // Type mappings - map OpenAPI schemas to shared-kernel classes
    typeMappings = [
        'ErrorResponse': 'ch.batbern.shared.dto.ErrorResponse',
        'PaginationMetadata': 'ch.batbern.shared.api.PaginationMetadata'
    ]

    configOptions = [
        dateLibrary: 'java8',
        interfaceOnly: 'false',             // Generate POJOs for DTOs
        skipDefaultInterface: 'true',
        useTags: 'false',
        useSpringBoot3: 'true',
        documentationProvider: 'none',
        openApiNullable: 'false',
        hideGenerationTimestamp: 'true',
        useBeanValidation: 'true',
        performBeanValidation: 'true',
        useOptional: 'false',
        useJakartaEe: 'true',
        generateBuilders: 'true'            // Generate builder pattern for DTOs (as requested)
    ]

    // Generate only models (DTOs), no API interfaces
    globalProperties = [
        models: '',
        apis: 'false',
        supportingFiles: 'ApiUtil.java'
    ]

    // Skip generation of shared-kernel types
    schemaMappings = [
        'ErrorResponse': 'ch.batbern.shared.dto.ErrorResponse',
        'PaginationMetadata': 'ch.batbern.shared.api.PaginationMetadata'
    ]
}

// OpenAPI Generator - Generate User API client DTOs (Story 2.2a: Cross-service types)
task openApiGenerateUsersClient(type: org.openapitools.generator.gradle.plugin.tasks.GenerateTask) {
    generatorName = 'spring'
    inputSpec = "$rootDir/docs/api/users-api.openapi.yml".toString()
    outputDir = "$buildDir/generated-users-client".toString()
    apiPackage = 'ch.batbern.events.api.generated.users'
    modelPackage = 'ch.batbern.events.dto.generated.users'
    validateSpec = false

    importMappings = [
        'ErrorResponse': 'ch.batbern.shared.dto.ErrorResponse',
        'PaginationMetadata': 'ch.batbern.shared.api.PaginationMetadata',
        'PaginatedResponse': 'ch.batbern.shared.dto.PaginatedResponse'
    ]

    typeMappings = [
        'ErrorResponse': 'ch.batbern.shared.dto.ErrorResponse',
        'PaginationMetadata': 'ch.batbern.shared.api.PaginationMetadata'
    ]

    configOptions = [
        dateLibrary: 'java8',
        interfaceOnly: 'false',
        skipDefaultInterface: 'true',
        useTags: 'false',
        useSpringBoot3: 'true',
        documentationProvider: 'none',
        openApiNullable: 'false',
        hideGenerationTimestamp: 'true',
        useBeanValidation: 'true',
        performBeanValidation: 'true',
        useOptional: 'false',
        useJakartaEe: 'true',
        generateBuilders: 'true'
    ]

    globalProperties = [
        models: '',
        apis: 'false',
        supportingFiles: 'ApiUtil.java'
    ]

    schemaMappings = [
        'ErrorResponse': 'ch.batbern.shared.dto.ErrorResponse',
        'PaginationMetadata': 'ch.batbern.shared.api.PaginationMetadata'
    ]
}

// Make compileJava depend on all OpenAPI generation tasks
compileJava.dependsOn tasks.openApiGenerate, tasks.openApiGenerateUsersClient, tasks.openApiGenerateTopics

// Add generated sources to source sets
sourceSets {
    main {
        java {
            srcDir "$buildDir/generated/src/main/java"
            srcDir "$buildDir/generated-users-client/src/main/java"
            srcDir "$buildDir/generated-topics/src/main/java"
        }
    }
}

// Clean generated sources when running clean
clean {
    delete "$buildDir/generated"
    delete "$buildDir/generated-users-client"
    delete "$buildDir/generated-topics"
}
